# jade

./: .gitignore  404.html  Cargo.toml  README.md  jade.html  print.html  searchindex.js  toc.html  toc.js
.cargo/: config.toml
.github/workflows/: docs.yml  ghpages.yml  main.yml  typos.yml
cli/: Cargo.toml
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: builder.rs  lib.rs  manifest.rs  util.rs
crates/cli/src/cmd/: build.rs  mod.rs  new.rs
crates/hook/: Cargo.toml
crates/hook/src/: lib.rs
crates/jade/: Cargo.toml  README.md
crates/jade/derive/: Cargo.toml  README.md
crates/jade/derive/src/: accumulate.rs  authorize.rs  lib.rs  refine.rs
crates/jade/src/: handler.rs  lib.rs  log.rs  logging.rs  prelude.rs
crates/jade/src/host/: general.rs  import.rs  mod.rs
crates/jam-pvm-common/: .cargo_vcs_info.json  Cargo.toml
crates/jam-pvm-common/src/: host_calls.rs  lib.rs  logging.rs  service.rs
crates/jam-types/: Cargo.toml
crates/jam-types/src/: hex.rs  lib.rs  opaque.rs  simple_result_code.rs  types.rs  vec_map.rs  vec_set.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: ext.rs  lib.rs
crates/simulator/src/cmd/: accumulate.rs  authorize.rs  mod.rs  refine.rs
crates/sys/: Cargo.toml  README.md  build.rs
crates/sys/src/: lib.rs
crates/testing/: Cargo.toml  README.md
crates/testing/src/: account.rs  auth.rs  builder.rs  chain.rs  crypto.rs  exec.rs  ext.rs  extrinsic.rs  key.rs  lib.rs  util.rs
crates/testing/src/env/: account.rs  accumulate.rs  authorize.rs  loader.rs  logs.rs  mod.rs  package.rs  refine.rs  report.rs
crates/testing/src/simulator/: binary.rs  mod.rs  result.rs
crates/testing/src/vm/: mod.rs  result.rs
crates/testing/tests/: encoding.rs
docs/: book.toml
docs/src/: SUMMARY.md  jade.md
docs/src/service/: build.md  structure.md  testing.md
jade/: Cargo.toml  README.md
jadex/: Cargo.toml  README.md
jadex/examples/header/: Cargo.toml
jadex/examples/header/.sqlx/: query-d664e832ce200f8fe53fa822ae82ef4361643f9dabf3621f30eb79ee8e2e2517.json  query-de1de64887a91fc9c7e9f499d5b4f76f21e8968436409306cc1624fa368ef395.json
jadex/examples/header/migrations/: 20250505134856_headers.sql
jadex/examples/header/src/: main.rs
jadex/src/: hook.rs  lib.rs
jadex/src/config/: graphql.rs  mod.rs  node.rs
jadex/src/service/: graphql.rs  mod.rs  node.rs  postgres.rs
polkajam/jam-pvm-common/: README.md
polkajam/jam-pvm-common/src/: authorizer.rs  host_calls.rs  imports.rs  mem.rs  result.rs
polkajam/jam-types/: Cargo.toml  README.md
polkajam/jam-types/src/: fixed_vec.rs  hex.rs  lib.rs  pvm.rs  simple.rs  vec_map.rs
service/: build.html  structure.html  testing.html
services/jam-bootstrap-service/: Cargo.toml
services/jam-bootstrap-service/src/: lib.rs
services/jam-null-authorizer/: Cargo.toml
services/jam-null-authorizer/src/: lib.rs
services/lookup/: Cargo.toml
services/lookup/src/: instruction.rs  lib.rs  service.rs  storage.rs
services/lookup/tests/: main.rs
services/nauth/: Cargo.toml  build.rs
services/nauth/src/: lib.rs
services/nauth/tests/: main.rs
services/simple-token-service/: Cargo.toml
services/simple-token-service/src/: instruction.rs  lib.rs  service.rs  storage.rs  tests.rs
services/stoken/: Cargo.toml  README.md  build.rs
services/stoken/src/: instruction.rs  lib.rs  service.rs  storage.rs
services/stoken/tests/: main.rs
