[workspace]
members = ["crates/*", "polkajam/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["clearloop <tianyi.gc@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/spacejamapp/spacejam"
repository = "https://github.com/spacejamapp/jade"

[workspace.dependencies]
sys = { path = "crates/sys" }

# jam dependencies
serde-jam = "0.0.12"
spacejam-service = "0.0.12"

bounded-collections = { version = "0.3.2", default-features = false }
jam-types = { path = "polkajam/jam-types", version = "0.1.22", default-features = false }
jam-pvm-builder = "0.1.22"
jam-pvm-common = { path = "polkajam/jam-pvm-common", version = "0.1.22", default-features = false }
jam-program-blob = { version = "0.1.22", default-features = false }
polkavm-linker = "0.24.0"
polkavm-derive = "0.24.0"
polkavm-common = "0.24.0"
podec = { version = "0.1.0", package = "jam-codec", default-features = false, features = [
    "derive",
] }

# crates.io
anyhow = "1.0.93"
blake2 = "0.10.6"
clap = "4.5.30"
etc = "0.1.20"
dirs = "6.0.0"
hex = "0.4.3"
jobserver = "0.1.33"
quote = "1.0.33"
serde = { version = "1.0.215", features = ["derive"], default-features = false }
serde_json = "1.0.133"
syn = "2.0.90"
temp-dir = "0.1.16"
time = "0.3.41"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = "1.42.0"
tokio-stream = "0.1.17"
toml = { version = "0.8.19", features = ["parse"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[patch.crates-io]
jam-types = { path = "polkajam/jam-types" }
jam-pvm-common = { path = "polkajam/jam-pvm-common" }
