[workspace]
members = ["crates/*", "crates/jade/derive", "services/*"]
resolver = "2"

[workspace.package]
version = "0.0.12-patch-1"
edition = "2024"
authors = ["clearloop <tianyi.gc@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/spacejamapp/spacejam"
repository = "https://github.com/spacejamapp/jade"

[workspace.dependencies]
jade = { path = "crates/jade" }
jade-derive = { path = "crates/jade/derive" }
sys = { path = "crates/sys" }

# spacejam dependencies
codec = { package = "serde-jam", version = "0.0.12", default-features = false }
service = { package = "spacejam-service", version = "0.0.12", default-features = false }

# crates.io
anyhow = "1.0.93"
blake2 = "0.10.6"
clap = "4.5.30"
etc = "0.1.20"
dirs = "6.0.0"
hex = "0.4.3"
jobserver = "0.1.33"
polkavm-linker = "0.29.0"
polkavm-derive = "0.29.0"
polkavm-derive-impl = "0.29.0"
polkavm-common = "0.29.0"
proc-macro2 = "1.0.101"
quote = "1.0.33"
serde = { version = "1.0.215", features = ["derive"], default-features = false }
serde_json = "1.0.133"
syn = "2.0.106"
temp-dir = "0.1.16"
time = "0.3.41"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = "1.42.0"
tokio-stream = "0.1.17"
toml = { version = "0.8.19", features = ["parse"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
