[workspace]
members = ["crates/*", "crates/jade/derive", "services/*"]
resolver = "2"

[workspace.package]
version = "0.0.15-pre.1"
edition = "2024"
authors = ["clearloop <tianyi.gc@gmail.com>"]
license = "GPL-3.0"
homepage = "https://spacejam.app"
repository = "https://github.com/spacejamapp/jade"

[workspace.dependencies]
cjam = { path = "crates/cli", version = "0.0.15-pre.1" }
jade = { path = "crates/jade", default-features = false, version = "0.0.15-pre.1" }
jade-derive = { path = "crates/jade/derive", version = "0.0.15-pre.1" }
spacevm = { path = "crates/sys", package = "spacevm-sys", version = "0.0.15-pre.1" }
testing = { path = "crates/testing", package = "jade-testing", version = "0.0.15-pre.1" }

# services
nauth = { path = "services/nauth" }
stoken = { path = "services/stoken" }

# spacejam dependencies
codec = { package = "serde-jam", version = "0.0.14", default-features = false }
service = { package = "spacejam-service", version = "0.0.14", default-features = false }

# crates.io
anyhow = { version = "1.0.93", default-features = false }
blake2 = "0.10.6"
clap = "4.5.30"
etc = "0.1.20"
dirs = "6.0.0"
hex = { version = "0.4.3", default-features = false }
jam-codec = "0.1.1"
jam-program-blob = { version = "0.1.22", default-features = false }
jobserver = "0.1.33"
polkavm-linker = "0.29.0"
polkavm-derive = "0.29.0"
polkavm-derive-impl = "0.29.0"
polkavm-common = "0.29.0"
proc-macro2 = "1.0.101"
quote = "1.0.33"
serde = { version = "1.0.215", features = ["derive"], default-features = false }
serde_json = "1.0.133"
syn = "2.0.106"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
toml = { version = "0.8.19", features = ["parse"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.metadata.conta]
packages = ["cjam", "spacevm", "testing", "jade-derive", "jade"]
