[package]
name = "jadex"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
codec.workspace = true
clap.workspace = true
hex.workspace = true
network.workspace = true
runtime.workspace = true
tracing.workspace = true
score.workspace = true
serde_json.workspace = true
spacejam.workspace = true
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
