[package]
name = "cjam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/cjam"
description = "Jam service builder"
keywords = ["pvm", "spacejam", "jam"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
etc.workspace = true
serde_json.workspace = true
toml.workspace = true
jobserver.workspace = true

# jam deps
jam-codec.workspace = true
jam-program-blob = { workspace = true, features = ["polkavm"] }
polkavm-linker.workspace = true
