[package]
name = "jade"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
codec.workspace = true
jade-derive.workspace = true
serde.workspace = true
service.workspace = true
polkavm-derive.workspace = true
testing.workspace = true

[features]
default = []
logging = []
std = ["anyhow/std", "codec/std", "serde/std", "service/std"]
tiny = []
