[package]
name = "jade"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "jade"
path = "bin/jade.rs"

[dependencies]
anyhow.workspace = true
codec.workspace = true
jade-derive.workspace = true
serde.workspace = true
service.workspace = true
polkavm-derive.workspace = true

[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
cjam.workspace = true
testing.workspace = true

[features]
default = []
logging = []
std = ["anyhow/std", "codec/std", "serde/std", "service/std"]
tiny = []
