[package]
name = "jam-pvm-common"
version = "0.1.22"
authors = ["parity <admin@parity.io>"]
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "Common logic for JAM PVM crates including services and authorizers"

[dependencies]
jam-types = { workspace = true, default-features = false }
polkavm-derive.workspace = true
bounded-collections = { workspace = true, default-features = false, features = [
    "jam-codec",
] }
codec = { package = "jam-codec", version = "0.1.0", default-features = false }

[features]
default = ["std"]
tiny = ["jam-types/tiny"]
std = ["jam-types/std"]
authorizer = []
service = []
logging = []
