[package]
name = "jam-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "JAM protocol datatypes for interoperation between node internals, services and authorizers"

[dependencies]
codec = { package = "jam-codec", version = "0.1.0" }
bounded-collections = "0.3.2"
macro_rules_attribute = "0.2"
atomic-traits = "0.4"
serde = { workspace = true, optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[features]
default = ["std"]
tiny = []
std = ["codec/std", "bounded-collections/std"]
serde = ["dep:serde", "dep:serde-big-array", "bounded-collections/serde"]
