[package]
name = "pvms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
codec.workspace = true
hex.workspace = true
podec.workspace = true
pvm.workspace = true
pvmi.workspace = true
score.workspace = true
testing.workspace = true
jam-pvm-common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
