[package]
name = "spacevm-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SpaceVM system interfaces"
documentation = "https://docs.rs/spacevm-sys"
categories = ["embedded", "api-bindings"]
keywords = ["pvm", "spacejam", "vm"]
include = ["lib", "src", "build.rs", "Cargo.toml", "README.md"]

[dependencies]
anyhow.workspace = true
serde-jam.workspace = true
spacejam-service.workspace = true
