[package]
name = "jade-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "testing"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
blake2.workspace = true
builder.workspace = true
cjam.workspace = true
codec.workspace = true
etc.workspace = true
hex.workspace = true
jam-pvm-common.workspace = true
jam-types.workspace = true
podec.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
score = { workspace = true, features = ["crypto"] }
