[package]
name = "jade-testing"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
codec.workspace = true
cjam.workspace = true
etc.workspace = true
spacevm.workspace = true
serde.workspace = true
service = { workspace = true, features = ["blake2"] }
tracing.workspace = true
tracing-subscriber.workspace = true
