[package]
name = "jade-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/jade-testing"
description = "Testing library for the JAM services"
keywords = ["pvm", "spacejam", "jam"]

[dependencies]
anyhow.workspace = true
codec.workspace = true
cjam.workspace = true
etc.workspace = true
hex = { workspace = true, features = ["std"] }
spacevm = { workspace = true, features = ["interp"] }
serde.workspace = true
service = { workspace = true, features = ["blake2"] }
tracing.workspace = true
tracing-subscriber.workspace = true
