[package]
name = "jam-null-authorizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "A JAM authorizer which always authorizes"

[lib]
crate-type = ["cdylib"]

[dependencies]
jam-types = { workspace = true, default-features = false }
jam-pvm-common = { workspace = true, default-features = false, features = [
    "logging",
    "authorizer",
] }
polkavm-derive = { workspace = true }

[features]
tiny = ["jam-types/tiny", "jam-pvm-common/tiny"]
