[package]
name = "nauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "A JAM authorizer which always authorizes"

[features]
tiny = []

[dependencies]
jade = { workspace = true }

[build-dependencies]
cjam.workspace = true
