[package]
name = "stoken"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
tiny = []
std = ["codec/std"]

[dependencies]
codec.workspace = true
serde = { workspace = true, features = ["alloc"] }
jade = { workspace = true, features = ["logging"] }

[dev-dependencies]
nauth.workspace = true
jade = { workspace = true, features = ["testing"] }

[build-dependencies]
cjam.workspace = true
