[package]
name = "stoken"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
tiny = []
std = ["codec/std"]

[dependencies]
codec.workspace = true
jade.workspace = true
serde.workspace = true

[dev-dependencies]
nauth.workspace = true

[build-dependencies]
cjam.workspace = true
