[package]
name = "stoken"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec.workspace = true
jade = { workspace = true, features = ["logging"] }
serde.workspace = true

[dev-dependencies]
nauth.workspace = true

[build-dependencies]
cjam.workspace = true

[features]
default = []
tiny = ["jade/tiny"]
std = ["codec/std"]
