[package]
name = "jade-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Derive macros for jade"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
polkavm-derive-impl.workspace = true
