[package]
name = "jadex-header"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
hex.workspace = true
runtime.workspace = true
score.workspace = true
jadex.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
